--- a/owl/views/todo_list.xml
+++ b/owl/views/todo_list.xml
@@ -35,9 +35,17 @@
             <field name="res_model">owl.todo.list</field>
             <field name="view_mode">tree,form</field>
         </record>
+
+        <record id="action_owl_todo_list_js" model="ir.actions.client">
+            <field name="name">Todo List OWL</field>
+            <field name="tag">owl.action_todo_list_js</field>
+        </record>
+    </data>
+
         <!--Menu View-->
         <menuitem name="OWL Tutorial" id="menu_owl_tutorial" sequence="10">
             <menuitem name="Todo List" id="menu_owl_todo_list" sequence="10" action="action_owl_todo_list"/>
+            <menuitem name="Todo List OWL" id="menu_owl_todo_list_js" sequence="10" action="action_owl_todo_list_js"/>
         </menuitem>
-    </data>
 </odoo>
+
