--- a/owl/views/todo_list.xml
+++ b/owl/views/todo_list.xml
@@ -38,7 +38,7 @@
 
         <record id="action_owl_todo_list_js" model="ir.actions.client">
             <field name="name">Todo List OWL</field>
-            <field name="tag">owl.action_todo_list_js"</field>
+            <field name="tag">owl.action_todo_list_js</field>
         </record>
     </data>
 
