created Sidebar to view customer locations in kanban view of Contacts App

--- a/owl/views/res_partner.xml
+++ b/owl/views/res_partner.xml
@@ -15,7 +15,7 @@
     <record id="res_partner_kanban_view_inherit" model="ir.ui.view">
         <field name="name">res.partner.kanban.view.inherit</field>
         <field name="model">res.partner</field>
-        <field name="inherit_id" ref="base.res_partner_kanban_viewgi"/>
+        <field name="inherit_id" ref="base.res_partner_kanban_view"/>
         <field name="arch" type="xml">
             <xpath expr="//kanban" position="attributes">
                 <attribute name="js_class">res_partner_kanban_view</attribute>
