--- a/owl/views/res_partner.xml
+++ b/owl/views/res_partner.xml
@@ -31,6 +31,10 @@
             <xpath expr="//form" position="attributes">
                 <attribute name="js_class">res_partner_form_view</attribute>
             </xpath>
+
+            <field name="email" position="attributes">
+                <attribute name="widget">valid_email</attribute>
+            </field>
         </field>
     </record>
 </data>
