created username widget in form view of contacts app and added LGPL-3 license to manifest

--- a/owl/views/res_partner.xml
+++ b/owl/views/res_partner.xml
@@ -35,6 +35,10 @@
             <field name="email" position="attributes">
                 <attribute name="widget">valid_email</attribute>
             </field>
+
+            <field name="website" position="before">
+                <field name="username" widget="username"/>
+            </field>
         </field>
     </record>
 </data>
