created custom range widget with slider for expected salary field in form view of contacts app

--- a/owl/views/res_partner.xml
+++ b/owl/views/res_partner.xml
@@ -38,6 +38,7 @@
 
             <field name="website" position="before">
                 <field name="username" widget="username"/>
+                <field name="expected_salary" widget="range"/>
             </field>
         </field>
     </record>
